--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <nav>
+    <div class="container">
+      <div class="logo">Header logo</div>
+      
+    </div>
+  </nav>
 </body>
 </html>
