--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <nav>
     <div class="container">
       <div class="logo">Header logo</div>
-      
+      <ul>
+        <a href="">link one</a>
+        <a href="">link two</a>
+        <a href="">link three</a>
+      </ul>
     </div>
   </nav>
 </body>
