--- a/index.html
+++ b/index.html
@@ -29,5 +29,53 @@
   </div>
   </header>
   
+  <section class="section">
+    <h2>some random information.</h2>
+    <div class="container">
+      <div class="box">
+        <p>Our free, comprehensive curriculum will equip you to be a full stack developer, no matter your current experience level.</p>
+      </div>
+      
+      <div class="box">
+        <p>The most effective learning happens while building projects, so we have strategically placed them throughout our curriculum. These projects will make a strong portfolio for you to showcase on your resume.</p>
+      </div>
+
+      <div class="box">
+        <p>The maintainers of the curriculum run a Discord community, with the help of countless other volunteers, where you can receive help with anything in our curriculum.</p>
+      </div>
+
+      <div class="box">
+        <p>You can deepen your understanding and improve your GitHub skills by contributing to our open source curriculum and helping others in our Discord community.</p>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="section1">
+    <div class="container">
+     <p>
+      The Odin Project provides a free open source coding curriculum that can be taken entirely online. Since its inception, it has helped many students get hired as developers and has assisted countless others in learning enough programming to work on their own personal projects.
+
+Erik Trautman founded The Odin Project in 2013. Currently it is maintained and continually improved by a team of volunteers many of whom learned to code with us. Many find success from Odin Project's curriculum because of its hands-on approach with learning and emphasis on building projects. The curriculum is meticulously curated to ensure the content is up-to-date.
+     </p>
+    </div>
+  </section>
+
+  <section class="section2">
+    <div class="container-section2">
+      
+      <div class="box-section2">
+        <p class="call-to-action">Call to action!, its time!</p>
+        <p class="signup">Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <button class="signup2">sign up</button>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <p>Copyright @ Lmaoweee 2024</p>
+    </div>
+  </footer>
 </body>
 </html>
